Fix RTL sub-menu text alignment

--- a/assets/css/style-rtl.css
+++ b/assets/css/style-rtl.css
@@ -10,6 +10,7 @@ th {
 
 .main-navigation li {
 	float: right;
+	text-align: right;
 }
 
 .main-navigation li.search-item,
