--- a/sass/layout/rtl/rtl-float.scss
+++ b/sass/layout/rtl/rtl-float.scss
@@ -9,7 +9,8 @@ th {
 }
 
 .main-navigation li {
-    float: right;
+	float: right;
+	text-align: right;
 }
 
 .main-navigation li.search-item,
